--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,5 @@
 
+
 body{
   background-color: black;
 }
@@ -32,9 +33,9 @@ header{
 
 .title{
   padding:80px 0 70px 0;
-  background-image: url("IMG_2910.JPG");
   background-size:cover;
   text-align: center;
+  background-image: url("IMG_2351.JPG");
 }
 .title h1{
   
@@ -176,4 +177,15 @@ transition: all 0.3s;
   font-size: 50px;
   margin-bottom: 100px;
   font-family: fantasy;
+}
+.sa {
+  opacity: 0;
+  transition: all .5s ease;
+}
+.sa.show {
+  opacity: 1;
+  transform: none;
+  }
+  .sa--up {
+  transform: translate(0, 100px);
 }
