--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,7 +56,8 @@ color:orange;
 }
 .main h1{
   text-align: center;
-  margin-bottom:100px;
+  margin-bottom:200px;
+  margin-top: 100px;
   color: white;
   font-size: 50px;
   letter-spacing: 5px;
@@ -91,21 +92,21 @@ transition: all 0.3s;
     width:300px;
   height:150px;
   float:right;
-  margin:80px 120px 0 0;
+  margin:180px 120px 0 0;
 
 }
 .d{
   position: relative;
     width:300px;
   height:150px;
-  margin:80px 0 0 120px;
+  margin:180px 0 0 120px;
 
 }
 .e{
   position: relative;
     width:300px;
   height:150px;
-  margin:80px 120px 0 0;
+  margin:180px 120px 0 0;
   float:right;
 
 }
@@ -113,7 +114,7 @@ transition: all 0.3s;
   position: relative;
     width:300px;
   height:150px;
-  margin:80px 0 0 120px;
+  margin:180px 0 0 120px;
 
 }
 .contents h3{
@@ -157,6 +158,8 @@ opacity: 0.9;
   letter-spacing: 5px;
   color: white;
   font-family: serif;
+  margin-bottom: 200px;
+  margin-top: 150px;
 }
 .acsess{
   text-align: center;
@@ -176,6 +179,7 @@ transition: all 0.3s;
   letter-spacing: 5px;
   font-size: 50px;
   margin-bottom: 100px;
+  margin-top: 200px;
   font-family: fantasy;
 }
 .sa {
